--- a/config.env
+++ b/config.env
@@ -1,2 +1,2 @@
 BOT_TOKEN= "2121566980:AAHvQWj7iKjo6U_5TP6T2yqSCOjspLSVwTY"
-MONGO_URL= "mongodb+srv://snpjames:NmKXHRS3kp*ggSd@cluster0.1igut.mongodb.net/cluster0?retryWrites=true&w=majority"
+MONGO_URL= "mongodb+srv://akshay:akshay@cluster0.eedj2.mongodb.net/myFirstDatabase?retryWrites=true&w=majority"
